// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Label (unit tests) when has a label should match the snapshot 1`] = `
<kv-form-label label="Text Field">
  <template shadowrootmode="open">
    <div class="form-field-container">
      <div class="label-container">
        <span class="label">
          Text Field
        </span>
      </div>
    </div>
  </template>
</kv-form-label>
`;

exports[`Form Label (unit tests) when is labeled and required should match the snapshot 1`] = `
<kv-form-label label="Text Field" required="">
  <template shadowrootmode="open">
    <div class="form-field-container">
      <div class="label-container">
        <span class="required">
          *
        </span>
        <span class="label">
          Text Field
        </span>
      </div>
    </div>
  </template>
</kv-form-label>
`;

exports[`Form Label (unit tests) when uses default props should match the snapshot 1`] = `
<kv-form-label>
  <template shadowrootmode="open">
    <div class="form-field-container"></div>
  </template>
</kv-form-label>
`;
